# signforge-verify-python

./: LICENSE  README.md  pyproject.toml
src/signforge_verify/: __init__.py  cli.py  verifier.py
tests/: test_verify.py
tests/fixtures/: proof-bundle.json  sample.proof.html
